[metadata]
name = hg-keychain
version = 0.0.1dev
description = Mercurial extension for storing passwords in the macOS keychain
long_description = file: README.rst
url = http://foss.heptapod.net/mercurial/hg-keychain
author = Dan Villiom Podlaski Christiansen
author_email = danchr@gmail.com
readme = README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python
    Topic :: Software Development :: Version Control
    Environment :: MacOS X

[options]
zip_safe = False
namespace_packages =
    hgext3rd
py_modules = hgext3rd.keychain
python_requires = >=3.6
install_requires =
    pyobjc-framework-Security; \
       sys_platform == "darwin"
